--- a/exercicio6-avancado/exercicio6-avancado.html
+++ b/exercicio6-avancado/exercicio6-avancado.html
@@ -35,12 +35,13 @@
 						<button class="login-form-btn" id="botao-cadastro" style="display: none" type="submit">
 							Cadastrar
 						</button>
+
 					</div>
 
 					<ul class="login-utils">
 
 						<li>
-							<span class="text1">
+							<span class="text1" id="span-conta">
 								Não tem conta?
 							</span>
  
